# fuzzy-rocket-landing

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: base_config.json  config.json
fuzzers/: Cargo.toml  pyproject.toml
fuzzers/python/fuzzers/: __init__.py  __init__.pyi  plotting.py
fuzzers/src/: engine.rs  lib.rs  membership.rs  rules.rs  variables.rs
src/fuzzy_rocket_landing/: config.py  draw_utils.py  editor.py  main.py  tips.py  wind.py
src/fuzzy_rs/: editor.py  main.py  rocket.py  tips.py
