[project]
name = "fuzzy-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuzzers",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "raylib>=5.5.0.4",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "fuzzers",
]

[tool.uv.sources]
fuzzers = { workspace = true, editable = true }

[project.scripts]
sim = "fuzzy_rs.main:main"
